--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </section>
     <section class="interaction">
       <h2>Explore the Features</h2>
-      <button id="show-details-btn">Show More Details</button>
+      <button id="show-details-btn">Click for more Details</button>
       <div id="details" class="hidden">
         <ul>
           <li>Containerization: <strong>Docker</strong></li>
