--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header>
-    <h1>Hello, I'm Shraddha Gupta!</h1>
+    <h1>Hello, I'm Shraddha gupta Btech cse student!</h1>
     <p>This is my sample website.</p>
   </header>
   <main>
