--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           <li>Containerization: <strong>Docker</strong></li>
           <li>Continuous Integration & Deployment: <strong>Jenkins</strong></li>
           <li>Configuration Management: <strong>Ansible</strong></li>
-          <li>Monitoring: <strong>Prometheus</strong></li>
+          <li>Continous Monitoring: <strong>Prometheus</strong></li>
         </ul>
       </div>
     </section>
