--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <header>
     <h1>Hello, I'm Shraddha gupta </h1>
-    <p>This is my sample webpage.</p>
+    <p>This is my sample webpage for devops project.</p>
   </header>
   <main>
     <section class="intro">
